adding s3 bucker resource in cloudFormation template

--- a/ec2-sg.yml
+++ b/ec2-sg.yml
@@ -50,3 +50,12 @@ Resources:
     Properties:
       AllocationId: !GetAtt ElasticIP.AllocationId
       InstanceId: !Ref SimpleEC2Instance
+  
+S3Bucket:
+    Type: "AWS::S3::Bucket"
+    Properties:
+      BucketName: !Sub "${AWS::StackName}-sample-bucket"
+      AccessControl: Private
+      Tags:
+        - Key: Name
+          Value: DemoS3Bucket
